--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/microservices": "^11.0.1",
     "@nestjs/mongoose": "^10.1.0",
     "@nestjs/passport": "^11.0.2",
     "@nestjs/platform-express": "^10.0.0",
