--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "joi": "^17.13.3",
     "mongoose": "^8.9.5",
     "nestjs-pino": "^4.2.0",
+    "nodemailer": "^6.9.16",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -54,6 +55,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/nodemailer": "^6.4.17",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
