--- a/package.json
+++ b/package.json
@@ -34,12 +34,10 @@
     "joi": "^17.13.3",
     "mongoose": "^8.9.5",
     "nestjs-pino": "^4.2.0",
-    "nodemailer": "^6.9.16",
     "pino-http": "^10.4.0",
     "pino-pretty": "^13.0.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1",
-    "stripe": "^17.5.0"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -48,7 +46,6 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
-    "@types/nodemailer": "^6.4.17",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
