more dockerfile optimizations

--- a/apps/auth/Dockerfile
+++ b/apps/auth/Dockerfile
@@ -14,7 +14,7 @@ COPY libs libs
 
 RUN cd apps/auth && pnpm install
 
-RUN pnpm run build
+RUN pnpm run build auth
 
 FROM node:alpine AS production
 
