--- a/apps/payments/Dockerfile
+++ b/apps/payments/Dockerfile
@@ -14,7 +14,7 @@ COPY libs libs
 
 RUN cd apps/payments && pnpm install
 
-RUN pnpm run build
+RUN pnpm run build payments
 
 FROM node:alpine AS production
 
