--- a/apps/reservations/Dockerfile
+++ b/apps/reservations/Dockerfile
@@ -12,7 +12,7 @@ RUN pnpm install
 COPY apps/reservations apps/reservations
 COPY libs libs
 
-RUN pnpm run build
+RUN pnpm run build reservations
 
 FROM node:alpine AS production
 
