--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,7 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+# k8s
+k8s/**/charts
+k8s/**/templates
