--- a/apps/auth/Dockerfile
+++ b/apps/auth/Dockerfile
@@ -5,6 +5,7 @@ WORKDIR /usr/src/app
 COPY package.json .
 COPY pnpm-lock.yaml .
 COPY tsconfig.json .
+COPY nest-cli.json .
 
 RUN npm install -g pnpm
 RUN pnpm install
