mongodb connectionString secret

--- a/k8s/airbnb/templates/reservations/deployment.yaml
+++ b/k8s/airbnb/templates/reservations/deployment.yaml
@@ -17,3 +17,9 @@ spec:
       containers:
       - image: us-west2-docker.pkg.dev/nestjs-airbnb-448405/reservations/production
         name: reservations
+        env:
+        - name: MONGODB_URI
+          valueFrom:
+            secretKeyRef:
+              name: mongodb
+              key: connectionString
