--- a/k8s/airbnb/templates/notifications/deployment.yaml
+++ b/k8s/airbnb/templates/notifications/deployment.yaml
@@ -17,3 +17,22 @@ spec:
       containers:
       - image: us-west2-docker.pkg.dev/nestjs-airbnb-448405/notifications/production
         name: notifications
+        env:
+        - name: PORT
+          value: '3000'
+        - name: GOOGLE_OAUTH_CLIENT_ID
+          value: 534686174745-hpkjs9kg03mt85k2iinpn0ji673j4ojp.apps.googleusercontent.com
+        - name: GOOGLE_OAUTH_CLIENT_SECRET
+          valueFrom:
+            secretKeyRef:
+              name: google
+              key: clientSecret
+        - name: GOOGLE_OAUTH_REFRESH_TOKEN
+          valueFrom:
+            secretKeyRef:
+              name: google
+              key: refreshToken
+        - name: SMTP_USER
+          value: golangbank@gmail.com
+        ports:
+        - containerPort: 3000
