--- a/k8s/airbnb/templates/payments/deployment.yaml
+++ b/k8s/airbnb/templates/payments/deployment.yaml
@@ -17,3 +17,17 @@ spec:
       containers:
       - image: us-west2-docker.pkg.dev/nestjs-airbnb-448405/payments/production
         name: payments
+        env:
+        - name: PORT
+          value: "3001"
+        - name: NOTIFICATIONS_HOST
+          value: notifications
+        - name: NOTIFICATIONS_PORT
+          value: "3000"
+        - name: STRIPE_SECRET_KEY
+          valueFrom:
+            secretKeyRef:
+              name: stripe
+              key: apiKey
+        ports:
+        - containerPort: 3001
