--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "test:e2e": "docker-compose --project-directory ./e2e up e2e"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.12.5",
+    "@grpc/proto-loader": "^0.7.13",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
@@ -37,7 +39,8 @@
     "pino-http": "^10.4.0",
     "pino-pretty": "^13.0.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "ts-proto": "^2.6.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
