--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
     "test:e2e": "docker-compose --project-directory ./e2e up e2e"
   },
   "dependencies": {
+    "@apollo/gateway": "^2.9.3",
+    "@apollo/server": "^4.11.3",
+    "@apollo/subgraph": "^2.9.3",
+    "@nestjs/apollo": "^12.0.7",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/graphql": "^12.0.8",
     "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "^10.0.0",
     "@nestjs/mongoose": "^10.1.0",
@@ -31,13 +36,15 @@
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
     "express": "^4.21.2",
+    "graphql": "^16.10.0",
     "joi": "^17.13.3",
     "mongoose": "^8.9.5",
     "nestjs-pino": "^4.2.0",
     "pino-http": "^10.4.0",
     "pino-pretty": "^13.0.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "save": "^2.9.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
